fixes in responsive side card

--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -1,6 +1,5 @@
 .home-page__container {
   margin-left: 28vw;
-  width: calc(100% - 28vw);
   padding-top: 5rem;
 }
 
@@ -8,7 +7,6 @@
   max-width: 90%;
   min-height: calc(100vh - 5rem);
   padding: 0.625rem 8% 0;
-  position: relative;
   display: flex;
   flex-direction: column;
   overflow: hidden;
@@ -16,11 +14,11 @@
 
 .home-page__svg {
   width: 21.875rem;
-  position: absolute;
   top: -3.125rem;
-  right: -9.375rem;
+  right: 5rem;
   z-index: 1;
   opacity: 0.5;
+  position: absolute;
 }
 
 .home-page__personal-info__container {
@@ -75,6 +73,10 @@
 
   .home-page {
     margin: 0 auto;
+  }
+
+  .home-page__svg {
+    display: none;
   }
 }
 
