--- a/tomas-cardenasv2/src/components/styles/pages/AboutMe.css
+++ b/tomas-cardenasv2/src/components/styles/pages/AboutMe.css
@@ -1,13 +1,13 @@
 .about-page__container {
   margin-top: 5rem;
   min-height: 50svh;
-  /* background-color: red; */
 }
 
 .about-page__content {
   margin: 2rem;
   display: grid;
   gap: 5rem;
+  padding-right: 5rem;
 
   & p.about-page__content-pharag {
     max-width: 50ch;
