--- a/tomas-cardenasv2/src/components/styles/pages/ContactMe.css
+++ b/tomas-cardenasv2/src/components/styles/pages/ContactMe.css
@@ -13,7 +13,7 @@
   display: grid;
   justify-content: start;
   gap: 1.5rem;
-  grid-template-columns: minmax(30rem, 1fr);
+  grid-template-columns: minmax(30rem, .95fr);
   padding: 1rem 0 8rem 0;
 
   & label {
@@ -40,7 +40,6 @@
   }
 
   & input[type="submit"] {
-    /* height: 2rem; */
     width: 20rem;
     padding: 0.8rem;
     border-radius: 3rem;
