--- a/tomas-cardenasv2/src/components/styles/pages/AboutMe.css
+++ b/tomas-cardenasv2/src/components/styles/pages/AboutMe.css
@@ -9,7 +9,7 @@
   margin: 2rem;
   display: grid;
   gap: 3rem;
-  padding-right: 5rem;
+  /* padding-right: 2rem; */
 
   & p.about-page__content-pharag {
     font-size: 1.2rem;
